# nostradamus

./: .dockerignore  .env.example  .gitignore  DEPLOY.md  Dockerfile  Procfile  README.md  SECURITY.md  TODO.md  app.yaml  compose.yml  db.sqlite3  deploy.sh  docker-entrypoint.sh  manage.py  passwords.txt  pyproject.toml  requirements.txt  todo.md  todo.txt  www_sitename_com_wsgi.py
Nostradamus/: backends.py  middleware.py  settings.py  settings_heroku.py  urls.py  wsgi.py
main/: admin.py  avatars.py  context_processors.py  flags.py  forms.py  models.py  quotes.py  tests.py  urls.py  utils.py  views.py
main/migrations/: 0001_initial.py  0002_auto_20170615_2218.py  0003_auto_20170616_1445.py  0004_auto_20170616_1514.py  0005_auto_20170616_1554.py  0006_game_scheduled_datetime.py  0007_auto_20170617_2223.py  0008_auto_20170617_2224.py  0009_auto_20170617_2224.py  0010_auto_20170621_2105.py  0011_auto_20180607_1356.py  0012_auto_20180607_1412.py  0013_auto_20180609_0431.py  0014_auto_20180609_0437.py  0015_contest_users.py  0016_profile.py  0017_auto_20180611_1515.py  0018_auto_20180611_1535.py  0019_auto_20180611_1728.py  0020_auto_20180612_1050.py  0021_auto_20180612_1106.py  0022_bet_contest.py  0023_remove_team_flag.py  0024_auto_20180618_0949.py  0024_game_isplayoff.py  0025_merge_20180630_1240.py  0026_auto_20210611_2317.py  0027_alter_bet_id_alter_contest_id_alter_game_away_and_more.py  0028_remove_profile_contests_alter_bet_away_score_and_more.py  0029_profile_must_change_password.py  0030_profile_avatar.py  0031_alter_profile_avatar.py
main/static/: general.css  (+7 more)
(+24 files in other folders)
